# django_celery_rabbitmq_postgres

./: README.md  docker-compose.yml  manage.py  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
django_celery_rabbitmq/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
